# vocabulator

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  build.sh  makefile  meson.build  mount-tmpfs.sh  python-shell.nix  shell.nix  test.voc
assets/: config  vocabulary copy.md  vocabulary.json
doc/vocabulary/: static_structure.puml
poc/: libretranslate_api.py  strategies.py
src/: main.cc  meson.build
src/common/: meson.build
src/common/config/: config.cc  config.h
src/common/events/: event.h  event_dispatcher.h
src/common/exceptions/: config_error.h  global_error.h  parsing_error.h  vocabulary_error.h
src/network/: meson.build
src/network/http/: request.h
src/network/http/client/: client.txt  http_client.cc  https_client.cc  https_client.h  nttp_client.h
src/tools/: enum_utils.h  meson.build  random_number.h  scoped_async_wrapper.h  scoped_thread_wrapper.h  string_utils.cc  string_utils.h
src/ui/: add-new-word-window.h  main-window.cc  main-window.h  main_window.cc  main_window.h  meson.build
src/ui/events/: button-click-event.h  event.h  keyboard_event.h  mouse_events.h  text_input_event.h
src/ui/tools/: font-manager.cc  font-manager.h  font_manager.cc  font_manager.h  locale.h  meson.build  text.h
src/ui/widgets/: TextInput.h  button.cc  button.h  card.cc  card.h  meson.build  text-box.cc  text-box.h  text-input.cc  text-input.cc.txt  text-input.h  text-input.txt  text_box.cc  text_box.h  text_input.cc  text_input.h  widget.h
src/vocabulary/: meson.build  translation.cc  translation.h  vocabulary.cc  vocabulary.h  word.cc  word.h
test/: CMakeLists.txt
test/vocabulary/: CMakeLists.txt  translation-test.cc  vocabulary-test.cc  word-test.cc
